# linz_S3

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
benches/: s3_filter_bench.rs  s3_filter_local_bench.rs
src/: args.rs  download.rs  error.rs  gdal.rs  lib.rs  main.rs  reporter.rs  search.rs
src/linz_s3_filter/: bucket_config.rs  dataset.rs  linz_bucket.rs  mod.rs  reporter.rs  utils.rs
src/search/: linz_s3_filter.rs
tests/: cli_tests.rs  linz_s3_filter_tests.rs
