[package]
name = "linz_s3"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
env_logger = "0.11.6"
futures = "0.3.31"
indicatif = "0.17.11"
log = "0.4.25"
regex = "1.11.1"
reqwest = "0.12.12"
stac = { version = "0.11.1", features = ["object-store", "object-store-all", "object-store-aws"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }

[lib]
name = "linz_s3"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempdir = "0.3.7"
tempfile = "3.17.1"
