[package]
name = "linz_s3"
version = "0.4.4"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
env_logger = "0.11.6"
futures = "0.3.31"
indicatif = "0.17.11"
log = "0.4.25"
num_cpus = "1.16.0"
regex = "1.11.1"
reqwest = "0.12.12"
sanitize-filename = "0.6.0"
serde = "1.0.219"
stac = { version = "0.12.0", features = ["object-store", "object-store-all", "object-store-aws"] }
stac-extensions = "0.1.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
toml = "0.8.22"

[lib]
name = "linz_s3"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
serial_test = "3.2.0"
tempfile = "3.17.1"
