[package]
name = "linz_s3"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.6"
futures = "0.3.31"
indicatif = "0.17.11"
log = "0.4.25"
num_cpus = "1.17.0"
regex = "1.11.1"
reqwest =  "0.12.19" 
sanitize-filename = "0.6.0"
serde = "1.0.219"
stac-io = { git = "https://github.com/jrjdavidson/stac-rs", branch = "main", features = ["store-aws"] }
stac = { git = "https://github.com/jrjdavidson/stac-rs", branch = "main" }
stac-extensions = "0.1.0"
thiserror = "2.0.11"
tokio = { version = "1.45.1", features = ["rt","rt-multi-thread", "signal"] }
toml = "0.8.22"

[lib]
name = "linz_s3"

[dev-dependencies]
assert_cmd = "2.0.16"
criterion = { version = "0.6.0", features = ["async_tokio"] }
predicates = "3.1.3"
serial_test = "3.2.0"
tempfile = "3.20.0"

[[bench]]
name = "s3_filter_bench"
harness = false

[[bench]]
name = "s3_filter_local_bench"
harness = false
